notebook/etc/rules.v4
# Completed on Sat Jun  6 14:24:23 2015
# Generated by iptables-save v1.4.21 on Sat Jun  6 14:24:23 2015
*filter
:INPUT ACCEPT [405:55784]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1969:149844]
-A INPUT -s 192.168.1.39/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.1.1/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.1.190/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i wlan0 -p icmp --icmp-type echo-request -j DROP
-A INPUT -s 192.168.1.1/32 -i wlan0 -j ACCEPT
-A INPUT -s 192.168.1.190/32 -i wlan0 -j ACCEPT
-A INPUT -s 192.168.1.39/32 -i wlan0  -j ACCEPT
-A INPUT -s 192.168.1.0/24 -i wlan0 -j DROP


-A INPUT -s 192.168.1.5/32 -i eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -p icmp --icmp-type echo-request -j DROP
-A INPUT -s 192.168.1.1/32 -i eth0 -j ACCEPT
-A INPUT -s 192.168.1.5/32 -i eth0 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -i eth0 -j DROP
-A INPUT -s 192.168.0.0/24 -i eth0 -j DROP
COMMIT
